--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
+    "apollo-link-batch": "^1.1.7",
+    "apollo-link-batch-http": "^1.2.6",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-logger": "^1.2.3",
