--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "flow-bin": "^0.81.0",
+    "flow-bin": "^0.88.0",
+    "flow-typed": "^2.5.1",
     "front-matter": "^2.3.0",
     "glob": "^7.1.3",
     "husky": "^1.0.0-rc.15",
@@ -155,7 +156,7 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
+    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern /flow-typed/* --ignore-pattern \"!**/.*\" .",
     "lint-css": "stylelint \"src/**/*.{css,less,styl,scss,sass,sss}\"",
     "lint": "yarn run lint-js && yarn run lint-css",
     "fix-js": "yarn run lint-js --fix",
