change script name

--- a/package.json
+++ b/package.json
@@ -164,8 +164,8 @@
     "fix": "yarn run fix-js && yarn run fix-css",
     "flow": "flow",
     "flow:check": "flow check",
-    "codegen": "apollo client:codegen --target flow",
-    "codegen:standalone": "babel-node tools/run codegenStandalone",
+    "codegen:use-dev-server": "apollo client:codegen --target flow",
+    "codegen": "babel-node tools/run codegen",
     "test": "jest",
     "test-watch": "yarn run test --watch --notify",
     "test-cover": "yarn run test --coverage",
