--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - 'stable'
   - '8'
-  - '6'
 env:
   - CXX=g++-4.8
 addons:
@@ -13,6 +12,7 @@ addons:
       - g++-4.8
 cache: yarn
 script:
+  - yarn codegen
   - yarn lint
   - yarn test
   - yarn build --release
