--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "file-loader": "^3.0.1",
     "flow-bin": "^0.88.0",
     "flow-typed": "^2.5.1",
+    "fork-ts-checker-webpack-plugin": "^1.0.1",
     "front-matter": "^3.0.1",
     "glob": "^7.1.3",
     "husky": "^1.3.1",
