broken: but it launches

--- a/package.json
+++ b/package.json
@@ -60,6 +60,27 @@
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/classnames": "^2.2.7",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/express": "^4.16.1",
+    "@types/express-jwt": "^0.0.42",
+    "@types/graphql": "^14.2.0",
+    "@types/history": "^4.7.2",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/node-fetch": "^2.1.7",
+    "@types/passport": "^1.0.0",
+    "@types/passport-facebook": "^2.1.8",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/sequelize": "^4.27.46",
+    "@types/serialize-javascript": "^1.5.0",
+    "@types/source-map-support": "^0.5.0",
+    "@types/sqlite3": "^3.1.5",
+    "@types/universal-router": "^8.0.0",
+    "@types/whatwg-fetch": "^0.0.33",
     "apollo": "^2.6.2",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-bridge.0",
