--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.1.0",
     "svg-url-loader": "^2.3.2",
+    "typescript": "^3.4.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-assets-manifest": "^3.1.1",
