--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/express-jwt": "^0.0.42",
     "@types/graphql": "^14.2.0",
     "@types/history": "^4.7.2",
+    "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash.merge": "^4.6.6",
     "@types/node-fetch": "^2.1.7",
