--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,5 +56,6 @@
     "skipLibCheck": true,
 
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-  }
+  },
+  "exclude": ["node_modules", "build"]
 }
