--- a/package.json
+++ b/package.json
@@ -70,17 +70,20 @@
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash.merge": "^4.6.6",
+    "@types/mkdirp": "^0.5.2",
     "@types/node-fetch": "^2.1.7",
     "@types/passport": "^1.0.0",
     "@types/passport-facebook": "^2.1.8",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/rimraf": "^2.0.2",
     "@types/sequelize": "^4.27.46",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.0",
     "@types/sqlite3": "^3.1.5",
     "@types/universal-router": "^8.0.0",
+    "@types/webpack-node-externals": "^1.6.3",
     "@types/whatwg-fetch": "^0.0.33",
     "apollo": "^2.6.2",
     "autoprefixer": "^9.5.0",
