--- a/package.json
+++ b/package.json
@@ -60,29 +60,52 @@
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/autoprefixer": "^9.4.0",
+    "@types/babel-core": "^6.25.6",
     "@types/body-parser": "^1.17.0",
+    "@types/browser-sync": "^0.0.43",
+    "@types/chokidar": "^2.1.3",
     "@types/classnames": "^2.2.7",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cssnano": "^4.0.0",
+    "@types/enzyme": "^3.9.1",
+    "@types/eslint": "^4.16.6",
+    "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/express": "^4.16.1",
     "@types/express-jwt": "^0.0.42",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/glob": "^7.1.1",
     "@types/graphql": "^14.2.0",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash.merge": "^4.6.6",
+    "@types/markdown-it": "^0.0.7",
     "@types/mkdirp": "^0.5.2",
     "@types/node-fetch": "^2.1.7",
     "@types/passport": "^1.0.0",
     "@types/passport-facebook": "^2.1.8",
+    "@types/postcss-calc": "^7.0.0",
+    "@types/postcss-nested": "^4.1.0",
+    "@types/prettier": "^1.16.1",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.8.10",
+    "@types/react-dev-utils": "^7.0.1",
     "@types/react-dom": "^16.8.3",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/rimraf": "^2.0.2",
     "@types/sequelize": "^4.27.46",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.0",
     "@types/sqlite3": "^3.1.5",
+    "@types/stylelint": "^9.10.0",
+    "@types/typescript": "^2.0.0",
     "@types/universal-router": "^8.0.0",
+    "@types/webpack": "^4.4.27",
+    "@types/webpack-assets-manifest": "^3.0.0",
+    "@types/webpack-bundle-analyzer": "^2.13.1",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-hot-middleware": "^2.16.5",
     "@types/webpack-node-externals": "^1.6.3",
     "@types/whatwg-fetch": "^0.0.33",
     "apollo": "^2.6.2",
