--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
     "@babel/preset-env": "^7.4.1",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@types/autoprefixer": "^9.4.0",
     "@types/babel-core": "^6.25.6",
@@ -126,14 +125,11 @@
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
-    "flow-bin": "^0.88.0",
-    "flow-typed": "^2.5.1",
     "fork-ts-checker-webpack-plugin": "^1.0.1",
     "front-matter": "^3.0.1",
     "glob": "^7.1.3",
@@ -205,14 +201,12 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"/flow-typed/*\" --ignore-pattern \"!**/.*\" .",
+    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
     "lint-css": "stylelint \"src/**/*.{css,less,styl,scss,sass,sss}\"",
     "lint": "yarn run lint-js && yarn run lint-css",
     "fix-js": "yarn run lint-js --fix",
     "fix-css": "yarn run lint-css --fix",
     "fix": "yarn run fix-js && yarn run fix-css",
-    "flow": "flow",
-    "flow:check": "flow check",
     "codegen": "babel-node --extensions '.ts' tools/run codegen",
     "test": "jest",
     "test-watch": "yarn run test --watch --notify",
