--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "not ie < 9"
   ],
   "dependencies": {
+    "animate.css": "^3.7.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
@@ -34,7 +35,6 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
     "node-fetch": "^2.6.0",
-    "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "pretty-error": "^2.1.1",
@@ -42,6 +42,8 @@
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
+    "react-notifications-component": "^1.1.1",
+    "reactstrap": "^7.1.0",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.0",
     "source-map-support": "^0.5.16",
@@ -65,7 +67,9 @@
     "@types/babel-core": "^6.25.6",
     "@types/babel__core": "^7.1.3",
     "@types/body-parser": "^1.17.1",
+    "@types/bootstrap": "^4.3.0",
     "@types/browser-sync": "^3001.0.28-alpha",
+    "@types/chokidar": "^2.1.3",
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
     "@types/cssnano": "^4.0.0",
@@ -82,6 +86,7 @@
     "@types/markdown-it": "^0.0.9",
     "@types/mkdirp": "^0.5.2",
     "@types/node-fetch": "^2.5.3",
+    "@types/node-sass": "^4.11.0",
     "@types/passport": "^1.0.1",
     "@types/passport-facebook": "^2.1.9",
     "@types/postcss-calc": "^7.0.0",
@@ -90,6 +95,7 @@
     "@types/react-dev-utils": "^9.0.1",
     "@types/react-dom": "^16.9.3",
     "@types/react-test-renderer": "^16.9.1",
+    "@types/reactstrap": "^7.1.3",
     "@types/rimraf": "^2.0.3",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.0",
@@ -107,6 +113,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.7",
     "chokidar": "^3.2.3",
     "css-loader": "^3.2.0",
@@ -134,6 +141,7 @@
     "lint-staged": "^9.4.2",
     "markdown-it": "^10.0.0",
     "mkdirp": "^0.5.1",
+    "node-sass": "^4.11.0",
     "null-loader": "^3.0.0",
     "opn-cli": "^5.0.0",
     "pixrem": "^5.0.0",
@@ -152,6 +160,7 @@
     "react-error-overlay": "^6.0.3",
     "react-test-renderer": "^16.11.0",
     "rimraf": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
