--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/express": "^4.17.2",
     "@types/express-jwt": "^0.0.42",
+    "@types/file-loader": "^4.2.0",
     "@types/glob": "^7.1.1",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.21",
@@ -95,6 +96,7 @@
     "@types/source-map-support": "^0.5.0",
     "@types/sqlite3": "^3.1.5",
     "@types/stylelint": "^9.10.1",
+    "@types/wait-on": "^3.2.0",
     "@types/webpack": "^4.39.8",
     "@types/webpack-assets-manifest": "^3.0.0",
     "@types/webpack-bundle-analyzer": "^2.13.3",
@@ -119,6 +121,7 @@
     "eslint-loader": "^3.0.2",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
@@ -132,6 +135,7 @@
     "jest-codemods": "^0.22.0",
     "jest-transform-graphql": "^2.1.0",
     "lint-staged": "^9.4.2",
+    "log-symbols": "^3.0.0",
     "markdown-it": "^10.0.0",
     "mkdirp": "^0.5.1",
     "null-loader": "^3.0.0",
@@ -156,8 +160,10 @@
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
     "svg-url-loader": "^3.0.2",
+    "terminate": "^2.1.2",
     "typescript": "~3.6.4",
     "url-loader": "^2.2.0",
+    "wait-on": "^3.3.0",
     "webpack": "^4.41.2",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.6.0",
